--- a/loc-houston.html
+++ b/loc-houston.html
@@ -51,8 +51,7 @@ contact-houston: yes
           <div class="col-sm-6">
             <p><strong>Stephen Shivar</strong><br/>
               Operations Manager<br/>
-              Main: +1 (281) 888-5069<br/>
-              Mobile: +1 (832) 720-8798
+              Main: +1 (281) 888-5069
             <a href="mailto:stephen.shivar@stoneagetools.com">stephen.shivar@stoneagetools.com</a></p>
           </div>
           <div class="col-sm-6">
@@ -66,15 +65,13 @@ contact-houston: yes
           <div class="col-sm-6">
             <p><strong>Harry Richmond</strong><br/>
               Automation Technician<br/>
-              Main: +1 (281) 888-5069<br/>
-              Mobile: +1 (713) 703-3207
+              Main: +1 (281) 888-5069
             <a href="mailto:harry.richmond@stoneagetools.com">harry.richmond@stoneagetools.com</a></p>
           </div>
           <div class="col-sm-6">
             <p><strong>Doug McGee</strong>
             <br/>Automation Technician<br/>
               Main: +1 (281) 888-5069<br/>
-              Mobile: +1 (281) 507-9080<br/>
               <a href="mailto:doug.mcgee@stoneagetools.com">doug.mcgee@stoneagetools.com</a></p>
           </div>
         </div>
@@ -83,7 +80,6 @@ contact-houston: yes
             <p><strong>Mike Rimmell</strong><br/>
               Rental, Repair and Automation (RRA) Technician<br/>
               Main: +1 (281) 888-5069<br/>
-              Mobile: +1 (832) 720-8596
             <a href="mailto:mike.rimmell@stoneagetools.com">mike.rimmell@stoneagetools.com</a></p>
           </div>
         </div>
