--- a/waterblast-automation/autobox-abx-2l.html
+++ b/waterblast-automation/autobox-abx-2l.html
@@ -407,6 +407,10 @@ master-slider: yes
   <div class="row">     
     <div id="owl-related" class="owl-carousel owl-theme">
       <div class="item">
+        <a href="/autopack-2l"><img class="img-responsive" src="/assets/img/product/thumb-autopack-2l-01.jpg" alt="AutoPack-3L">
+        <h5>AutoPack-2L</h5></a>
+      </div>
+      <div class="item">
         <a href="/banshee"><img src="/assets/img/product/thumb-banshee-01.jpg" alt="Banshee rotary tube cleaners">
         <h5>Banshee Rotary Tools</h5></a>
       </div>
