--- a/waterblast-automation/lightweight-positioner.html
+++ b/waterblast-automation/lightweight-positioner.html
@@ -293,6 +293,10 @@ master-slider: yes
   <div class="row">     
     <div id="owl-related" class="owl-carousel owl-theme">
       <div class="item">
+        <a href="/autopack-lwp"><img class="img-responsive" src="/assets/img/product/thumb-autopack-lwp-01.jpg" alt="AutoPack-LWP">
+        <h5>AutoPack-LWP</h5></a>
+      </div>
+      <div class="item">
         <a href="/abx-pro"><img class="img-responsive" src="/assets/img/product/thumb-abx-pro-02.jpg" alt="AutoBox ABX-PRO hose drive for pipe cleaning">
         <h5>AutoBox ABX-PRO</h5></a>
       </div>
