--- a/waterblast-automation/rigid-lance-machine.html
+++ b/waterblast-automation/rigid-lance-machine.html
@@ -266,6 +266,7 @@ master-slider: yes
         <div class="col-sm-4">
           <ul class="list-unstyled basic">
             <h3>Documentation</h3>
+            <li><a href="/assets/pdf/tool-talks/BRLM_tool_talk.pdf">BRLM Tool Talk</a></li>
             <li><a href="/assets/pdf/reference/Lancing_System_Assembly_Instructions.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Assembly Instructions</a> <em class="small grey">(Please allow time to download)</em></li>
           </ul>
         </div>
