--- a/waterblast-automation/autobox-abx-3l.html
+++ b/waterblast-automation/autobox-abx-3l.html
@@ -238,6 +238,10 @@ master-slider: yes
   <div class="row">     
     <div id="owl-related" class="owl-carousel owl-theme">
       <div class="item">
+        <a href="/autopack-3l"><img class="img-responsive" src="/assets/img/product/thumb-autopack-3l-01.jpg" alt="AutoPack-3L">
+        <h5>AutoPack-3L</h5></a>
+      </div>
+      <div class="item">
         <a href="/banshee"><img class="img-responsive" src="/assets/img/product/thumb-banshee-01.jpg" alt="Banshee rotary tube cleaners">
         <h5>Banshee Rotary Tools</h5></a>
       </div>
