--- a/waterblast-automation/autobox-abx-pro.html
+++ b/waterblast-automation/autobox-abx-pro.html
@@ -285,6 +285,10 @@ master-slider: yes
   <div class="row">     
     <div id="owl-related" class="owl-carousel owl-theme">
       <div class="item">
+        <a href="/autopack-pro-web"><img class="img-responsive" src="/assets/img/product/thumb-autopack-pro-01.jpg" alt="AutoPack-LWP">
+        <h5>AutoPack-PRO</h5></a>
+      </div>
+      <div class="item">
         <a href="/beetle"><img class="img-responsive" src="/assets/img/product/thumb-banshee-04.jpg" alt="Beetle tube cleaning tools">
         <h5>Beetle</h5></a>
       </div>
