--- a/downhole-tools/spincat-sc-125.html
+++ b/downhole-tools/spincat-sc-125.html
@@ -51,14 +51,15 @@ master-slider: yes
       <div class="clearfix"></div>
       </div>
       
-      <p class="product-description">The SC-125 provides well intervention teams with an advanced solution for 1 1/4” CT BHA’s requiring a “slick” or Slimhole profile. Proven effective in wells with small ID restrictions and a history of entry challenges, the SC-125’s smooth profile aids reaching target depths the first time then delivers powerful impact force and dwell time to enhance perf stimulation and clean-out objectives.</p>
+      <p class="product-description">The SC-125 provides well intervention teams with an advanced solution for 1 1/4” CT BHA’s requiring a “slick” or Slimhole profile. Proven effective in wells with small ID restrictions, heavy scale deposition, and a history of entry challenges, the SC-125’s smooth profile aids reaching target depths the first time then delivers powerful impact force and dwell time to enhance perf stimulation and clean-out objectives.</p>
       
       <h2>Features</h2>
       <ul class="feature-list">
         <li>Recessed head ensures rotation to continue when tool is against well bore wall and
           contributes to “slick” profile</li>
         <li>Constructed of hardened stainless steel for strength, durability &amp; chemical resistance</li>
-        <li>Drilled head sized for nominal flow rate of either .5 or 1.0 bpm</li>
+        <li>Effectively cuts scale in HCL acid clean-out jobs</li>
+        <li>Drilled head sized for nominal flow rates of .5 or 1.5 bpm</li>
         <li>Viscous speed control</li>
         <li>Field serviceable</li>
       </ul>
@@ -77,7 +78,8 @@ master-slider: yes
         <nav>
             <ul>
               <li><a href="#section-bar-1"><span>Specifications</span></a></li>
-              <li><a href="#section-bar-2"><span>Manuals/Docs</span></a></li>
+              <li><a href="#section-bar-2"><span>Applications</span></a></li>
+              <li><a href="#section-bar-3"><span>Manuals/Docs</span></a></li>
               <!--<li><a href="#section-bar-3"><span>Videos</span></a></li>-->
             </ul>
         </nav>
@@ -103,8 +105,8 @@ master-slider: yes
                 </tr>
                 <tr>
                   <th>Flow Range</th>
-                  <td>0.5-1.25 bpm</td>
-                  <td><span class="metric">21-53 gpm</span></td>
+                  <td>0.5-1.5 bpm</td>
+                  <td><span class="metric">21-63 gpm</span></td>
                 </tr>
 <!--
                 <tr>
@@ -167,8 +169,32 @@ master-slider: yes
             </aside>
           </section>
 
-          <!-- Manuals/Docs -->
+          <!-- Applications -->
           <section id="section-bar-2">
+            <div class="col-sm-4">
+              <ul class="list-unstyled basic">
+                <h3>Ideal For</h3>
+                <li>1 1/4” CT frequently used in offshore work</li>
+                <li>Effectively cuting scale in HCL acid clean-outs</li>
+              </ul>
+            </div>
+            <div class="col-sm-4">
+              <ul class="list-unstyled basic">
+                <h3>Adaptable For</h3>
+                <li>Capillary CT</li>
+                <li>Jet drilling operations to fishbone the well</li>
+              </ul>
+              <p><em>*May require Custom Solutions</em></p>
+            </div>
+            <aside class="col-sm-3 col-sm-offset-1 aside-box">
+              <h3>Need Support?</h3>
+              <p>Our expert staff is available Monday through Friday 8AM - 5PM MST to answer questions and offer advice on your toughest cleaning applications.</p>
+              <h4 class="slab">Phone: +1 970 259-2869<br>US Toll Free: (866) 795-1586</h4>
+            </aside>
+          </section>
+
+          <!-- Manuals/Docs -->
+          <section id="section-bar-3">
             <div class="col-sm-4">
               <ul class="list-unstyled basic">
                 <h3>Manuals</h3>
