--- a/index.html
+++ b/index.html
@@ -79,13 +79,11 @@ master-slider: yes
       <div class="section-heading">
         <h2>Features &amp; Promotions</h2>
       </div>   
-      <!-- Row 1 -->
+      <div class="row margin-bottom-20">
+        <a href="/autopack"><img src="/assets/img/features/autopack.png" alt="AutoPack autimated equipment kits for waterblasting" class="img-responsive"/></a>
+      </div> 
       <div class="row margin-bottom-20">
         <a href="/lightweight-striker"><img src="/assets/img/features/skrl_available.png" alt="Lightweight Striker remote shotgun cleaning" class="img-responsive"/></a>
-      </div> 
-      <!-- Row 2 -->
-      <div class="row margin-bottom-20">
-        <a href="/navigator"><img src="/assets/img/features/new_navigator.png" alt="Navigator process pipe cleaning" class="img-responsive"/></a>
       </div>  
     </div>
     <!-- End Features/Promos -->
@@ -145,6 +143,11 @@ master-slider: yes
     </div>
     <ul class="home-news list-unstyled">
       <li>
+        <h4><a href="http://news.stoneagetools.com/autopack-3l-and-autopack-2l-available">AutoPacks for ABX-3L and ABX-2L Now Available</a></h4>
+        <p>StoneAge is pleased to announce that AutoPacks are now available for ABX-3L and ABX-2L triple and dual lance tube cleaning systems.<br>
+        <small><i class="fa fa-paper-plane-o"></i> E-blast, July 2017</small></p>
+      </li>
+      <li>
         <h4><a href="http://news.stoneagetools.com/new-european-team-members">StoneAge Welcomes New European Team Members</a></h4>
         <p>StoneAge is pleased to welcome a new Sales Manager and Technical Product Expert to our European team.<br>
         <small><i class="fa fa-paper-plane-o"></i> E-blast, July 2017</small></p>
@@ -158,11 +161,6 @@ master-slider: yes
         <h4><a href="http://news.stoneagetools.com/abx-3l-accessories">AutoBox ABX-3L Accessories</a></h4>
         <p>Maximize your investment in StoneAge equipment with accessories that increase workplace safety, equipment capability, cleaning efficiency, and the life of your hoses and nozzles.<br>
         <small><i class="fa fa-newspaper-o"></i> E-blast, May 2017</small></p>
-      </li>
-      <li>
-        <h4><a href="http://news.stoneagetools.com/stoneage-europe-open">StoneAge Europe Now Open for Business</a></h4>
-        <p>We are pleased to announce that as of April 3, our StoneAge Europe facility in Malvern, United Kingdom, just outside of Birmingham, is ready to serve our waterblasting customers.<br>
-        <small><i class="fa fa-paper-plane-o"></i> E-blast, April 2017</small></p>
       </li>
       <li><a href="http://news.stoneagetools.com/">More news here</a></li>
     </ul>
