--- a/waterblast-automation/autobox-abx-pro.html
+++ b/waterblast-automation/autobox-abx-pro.html
@@ -60,7 +60,7 @@ master-slider: yes
         </div>
       <div class="clearfix"></div>
       </div>
-      <p class="product-description promo-heading"><em>Package it with AutoPacks! <a href="/autopack-pro-web" style="font-weight:300;">Find out how <i class="fa fa-angle-double-right" aria-hidden="true"></i></a></em></p>
+      <p class="product-description promo-heading"><em>Package it with AutoPacks! <a href="/autopack-pro" style="font-weight:300;">Find out how <i class="fa fa-angle-double-right" aria-hidden="true"></i></a></em></p>
       
       <p class="product-description">The AutoBox ABX-PRO is a hose feed tractor engineered with safety, portability and quick set-up in mind. This versatile device is designed with multiple mounting options and accessories to adapt it for a wide variety of pipe, drain and tube cleaning applications.</p>
       <p class="product-description">The ABX-PRO is the perfect tool for limited access applications and includes a lightweight control box for increased safety and mobility.</p>
@@ -144,7 +144,7 @@ master-slider: yes
         <aside class="col-sm-4 col-sm-offset-3 aside-box">
           <img src="/assets/img/thumb/autopack-box.png" class="img-responsive" style="width:100px; float:left; margin:20px 20px 60px 0;" alt="AutoPack-PRO" />
           <h3>AutoPack-PRO</h3>
-          <p>Everything you need to successfully complete pipe, drain, or exchanger tube cleaning <span style="font-weight:400;">packaged in an organized, durable job box.</span><br /><a href="/autopack-pro-web"><strong>More information <i class="fa fa-angle-double-right" aria-hidden="true"></i></strong></a></p>
+          <p>Everything you need to successfully complete pipe, drain, or exchanger tube cleaning <span style="font-weight:400;">packaged in an organized, durable job box.</span><br /><a href="/autopack-pro"><strong>More information <i class="fa fa-angle-double-right" aria-hidden="true"></i></strong></a></p>
         </aside>
       </section>
 
@@ -285,7 +285,7 @@ master-slider: yes
   <div class="row">     
     <div id="owl-related" class="owl-carousel owl-theme">
       <div class="item">
-        <a href="/autopack-pro-web"><img class="img-responsive" src="/assets/img/product/thumb-autopack-pro-01.jpg" alt="AutoPack-LWP">
+        <a href="/autopack-pro"><img class="img-responsive" src="/assets/img/product/thumb-autopack-pro-01.jpg" alt="AutoPack-LWP">
         <h5>AutoPack-PRO</h5></a>
       </div>
       <div class="item">
