--- a/waterblast-automation/autopack-3l.html
+++ b/waterblast-automation/autopack-3l.html
@@ -234,7 +234,7 @@ master-slider: yes
         <h5>AutoPack-2L</h5></a>
       </div>
       <div class="item">
-        <a href="/autopack-pro-web"><img class="img-responsive" src="/assets/img/product/thumb-autopack-2l-01.jpg" alt="AutoPack-2L">
+        <a href="/autopack-pro"><img class="img-responsive" src="/assets/img/product/thumb-autopack-2l-01.jpg" alt="AutoPack-2L">
         <h5>AutoPack-PRO</h5></a>
       </div>
       <div class="item">
