--- a/waterblast-automation/autopack-lwp.html
+++ b/waterblast-automation/autopack-lwp.html
@@ -235,7 +235,7 @@ master-slider: yes
   <div class="row">     
     <div id="owl-related" class="owl-carousel owl-theme">
       <div class="item">
-        <a href="/autopack-pro-web"><img class="img-responsive" src="/assets/img/product/thumb-autopack-pro-01.jpg" alt="AutoPack-LWP">
+        <a href="/autopack-pro"><img class="img-responsive" src="/assets/img/product/thumb-autopack-pro-01.jpg" alt="AutoPack-LWP">
         <h5>AutoPack-PRO</h5></a>
       </div>
       <div class="item">
