--- a/waterblast-automation/autopack-pro.html
+++ b/waterblast-automation/autopack-pro.html
@@ -2,7 +2,7 @@
 layout: default
 page-type: product
 title: The AutoPack-PRO automated equipment kit organizes all the components required to automate pipe, drain, and exchanger cleaning with the AutoBox ABX-PRO hose tractor right out of the box.
-permalink: /autopack-pro-web
+permalink: /autopack-pro
 master-slider: yes
 ---
 
@@ -50,7 +50,7 @@ master-slider: yes
         <div class="dropdown product-social">
           <a href="#" class="dropdown-toggle" type="button" role="button" data-toggle="dropdown"><i class="fa fa-caret-down"></i> Share</a>
           <ul class="dropdown-menu">
-            <li><a href="mailto:?subject=StoneAge AutoPacks&body=Check out the StoneAge AutoPack-PRO automated equipment kit for pipe and exchanger cleaning: http://www.stoneagetools.com/autopack-pro-web">E-mail link</a></li>
+            <li><a href="mailto:?subject=StoneAge AutoPacks&body=Check out the StoneAge AutoPack-PRO automated equipment kit for pipe and exchanger cleaning: http://www.stoneagetools.com/autopack-pro">E-mail link</a></li>
           </ul>
         </div>
         <div class="clearfix"></div>
