--- a/waterblast-tools-automated-equipment.html
+++ b/waterblast-tools-automated-equipment.html
@@ -126,7 +126,7 @@ landing: yes
         </div>
         
         <div class="mix pipe-cleaning exchanger-cleaning" data-name="autopack-pro" data-designation="automated">
-          <a href="/autopack-pro-web" class="search-text">
+          <a href="/autopack-pro" class="search-text">
             <img src="/assets/img/product/autopack-pro-01.jpg" class="img-responsive" />
             <h3>AutoPack-PRO</h3>
             <h5>Automated Equipment Kit</h5>
@@ -182,7 +182,7 @@ landing: yes
           </a>
         </div>
         
-        <div class="mix pipe-cleaning exchanger-cleaning" data-name="autopack-3l" data-designation="automated">
+        <div class="mix exchanger-cleaning" data-name="autopack-3l" data-designation="automated">
           <a href="/autopack-3l" class="search-text">
             <img src="/assets/img/product/autopack-3l-01.jpg" class="img-responsive" />
             <h3>AutoPack-3L</h3>
