remove rotary HX, add patents, misc updates

--- a/downhole-tools/spincat-sc-125.html
+++ b/downhole-tools/spincat-sc-125.html
@@ -59,7 +59,7 @@ master-slider: yes
           contributes to “slick” profile</li>
         <li>Constructed of hardened stainless steel for strength, durability &amp; chemical resistance</li>
         <li>Effectively cuts scale in HCL acid clean-out jobs</li>
-        <li>Drilled head sized for nominal flow rates of .5 or 1.5 bpm</li>
+        <li>Drilled head sized for nominal flow rates of .5 to 1.5 bpm</li>
         <li>Viscous speed control</li>
         <li>Field serviceable</li>
       </ul>
@@ -174,15 +174,16 @@ master-slider: yes
             <div class="col-sm-4">
               <ul class="list-unstyled basic">
                 <h3>Ideal For</h3>
-                <li>1 1/4” CT frequently used in offshore work</li>
-                <li>Effectively cuting scale in HCL acid clean-outs</li>
+                <li>Optimizing offshore 1 1/4” CT interventions</li>
+                <li>Cutting scale in HCL acid clean-outs</li>
+                <li>Enhancing hot or cold paraffin/asphaltene clean-outs</li>
               </ul>
             </div>
             <div class="col-sm-4">
               <ul class="list-unstyled basic">
                 <h3>Adaptable For</h3>
-                <li>Capillary CT</li>
-                <li>Jet drilling operations to fishbone the well</li>
+                <li>Capillary CT - Custom threads available</li>
+                <li>CT jet drilling and CT fishbone style mini-lateral drilling</li>
               </ul>
               <p><em>*May require Custom Solutions</em></p>
             </div>
