--- a/stoneage-patents.html
+++ b/stoneage-patents.html
@@ -85,6 +85,11 @@ permalink: /patents
         <td>Rotary nozzle design</td>
       </tr>
       <tr>
+        <td>9,699,361</td>
+        <td>BTC-200, other</td>
+        <td>Camera skid tractor nozzle</td>
+      </tr>
+      <tr>
         <td>6,085,994</td>
         <td>CST</td>
         <td>Cable supported rotary nozzle</td>
@@ -128,6 +133,11 @@ permalink: /patents
         <td>8,720,811</td>
         <td>SRT</td>
         <td>Apparatus for storing and dispensing pressure hose</td>
+      </tr>
+      <tr>
+        <td>9,702,136</td>
+        <td>Switcher</td>
+        <td>High pressure fluid spray nozzle incorporating a flow controlled switching valve</td>
       </tr>
       <tr>
         <td>D 622,810</td>
