--- a/sewer-tools-nozzles/hydro-x-rotary.html
+++ b/sewer-tools-nozzles/hydro-x-rotary.html
@@ -3,7 +3,7 @@ layout: default
 page-type: product
 title: StoneAge Rotary Hydro-X Nozzles for Hydroexcavation
 excerpt: Options for safely providing access to buried utilities by potholing or trenching with high pressure water.
-permalink: /rotary-hydro-x
+permalink: /rotary-hydro-x-PAUSE
 master-slider: yes
 ---
 
