Fully Loaded & misc

--- a/index.html
+++ b/index.html
@@ -80,11 +80,11 @@ master-slider: yes
         <h2>Features &amp; Promotions</h2>
       </div>   
       <div class="row margin-bottom-20">
-        <a href="/autopack"><img src="/assets/img/features/autopack.png" alt="AutoPack autimated equipment kits for waterblasting" class="img-responsive"/></a>
-      </div> 
+        <a href="http://info.stoneagetools.com/fully-loaded-fall-shutdown-special"><img src="/assets/img/features/fully-loaded.png" alt="Fully Loaded Fall Shutdown Special" class="img-responsive"/></a>
+      </div>
       <div class="row margin-bottom-20">
-        <a href="/lightweight-striker"><img src="/assets/img/features/skrl_available.png" alt="Lightweight Striker remote shotgun cleaning" class="img-responsive"/></a>
-      </div>  
+        <a href="/autopack"><img src="/assets/img/features/autopack.png" alt="AutoPack autimated equipment kits for waterblasting" class="img-responsive"/></a>
+      </div>   
     </div>
     <!-- End Features/Promos -->
 
@@ -143,24 +143,24 @@ master-slider: yes
     </div>
     <ul class="home-news list-unstyled">
       <li>
+        <h4><a href="http://news.stoneagetools.com/fully-loaded-for-fall-shutdowns">Fully Loaded Fall Shutdown Special</a></h4>
+        <p>Select Automated Equipment purchases come "Fully Loaded" with nozzles and hoses for the job.<br>
+        <small><i class="fa fa-newspaper-o"></i> E-blast, August 2017</small></p>
+      </li>
+      <li>
         <h4><a href="http://news.stoneagetools.com/autopack-3l-and-autopack-2l-available">AutoPacks for ABX-3L and ABX-2L Now Available</a></h4>
         <p>StoneAge is pleased to announce that AutoPacks are now available for ABX-3L and ABX-2L triple and dual lance tube cleaning systems.<br>
         <small><i class="fa fa-paper-plane-o"></i> E-blast, July 2017</small></p>
       </li>
       <li>
-        <h4><a href="http://news.stoneagetools.com/new-european-team-members">StoneAge Welcomes New European Team Members</a></h4>
-        <p>StoneAge is pleased to welcome a new Sales Manager and Technical Product Expert to our European team.<br>
-        <small><i class="fa fa-paper-plane-o"></i> E-blast, July 2017</small></p>
+        <h4><a href="http://news.stoneagetools.com/bop-622-backout-preventer">New Pipe Cleaning Backout Preventer for AutoBox ABX-500</a></h4>
+        <p>StoneAge is pleased to offer a versatile new option for mounting the AutoBox ABX-500 to pipe.<br>
+        <small><i class="fa fa-newspaper-o"></i> E-blast, July 2017</small></p>
       </li>
       <li>
         <h4><a href="http://news.stoneagetools.com/lightweight-striker-available">Announcing Lightweight Striker</a></h4>
         <p>StoneAge is pleased to announce the Lightweight Striker SKRL-100 automated remote shotgun cleaning system.<br>
         <small><i class="fa fa-paper-plane-o"></i> E-blast, June 2017</small></p>
-      </li>
-      <li>
-        <h4><a href="http://news.stoneagetools.com/abx-3l-accessories">AutoBox ABX-3L Accessories</a></h4>
-        <p>Maximize your investment in StoneAge equipment with accessories that increase workplace safety, equipment capability, cleaning efficiency, and the life of your hoses and nozzles.<br>
-        <small><i class="fa fa-newspaper-o"></i> E-blast, May 2017</small></p>
       </li>
       <li><a href="http://news.stoneagetools.com/">More news here</a></li>
     </ul>
