--- a/waterblast-automation/rigid-lance-machine.html
+++ b/waterblast-automation/rigid-lance-machine.html
@@ -72,12 +72,6 @@ master-slider: yes
         <li>Swivel wheels, jack stands, and rear supports provide extra stability and support in key points of the system</li>
         <li>Air or hydraulic powered</li>
       </ul>
-      <h2>Applicaions</h2>
-      <ul class="feature-list">
-        <li>Clearing and unplugging vertical and horizontal bundles</li>
-        <li>Cleaning and polishing evaporator tubes</li>
-        <li>Removing thin, hard scale, carbons, coke, and polymers</li>
-      </ul>
 
       <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Availability</a>
 
@@ -93,9 +87,9 @@ master-slider: yes
     <nav>
       <ul>
         <li><a href="#section-bar-1"><span>Specifications</span></a></li>
+        <li><a href="#section-bar-4"><span>Applications</span></a></li>
         <li><a href="#section-bar-2"><span>Manuals/Docs</span></a></li>
         <li><a href="#section-bar-3"><span>Videos</span></a></li>
-<!--        <li><a href="#section-bar-4"><span>Service Kits</span></a></li>-->
       </ul>
     </nav>
     <div class="content-wrap">
@@ -251,6 +245,26 @@ master-slider: yes
               <li>Guide blocks</li>
               <li>Control box</li>
             </ul>
+        </aside>
+      </section>
+      
+      <!-- Applications -->
+      <section id="section-bar-4">
+        <div class="col-sm-8">
+          <ul class="list-unstyled basic">
+            <h3>Applications</h3>
+            <ul class="feature-list">
+              <li>Clearing and unplugging vertical and horizontal bundles</li>
+              <li>Cleaning and polishing evaporator tubes</li>
+              <li>Removing thin, hard scale, carbons, coke, and polymers</li>
+            </ul>
+          </ul>
+        </div>
+        
+        <aside class="col-sm-3 col-sm-offset-1 aside-box">
+          <h3>Need Support?</h3>
+          <p>Our expert staff is available Monday through Friday 8AM - 5PM MST to answer questions and offer advice on your toughest cleaning applications.</p>
+          <h4 class="slab">Phone: +1 970 259-2869<br>US Toll Free: (866) 795-1586</h4>
         </aside>
       </section>
 
