--- a/index.html
+++ b/index.html
@@ -143,9 +143,14 @@ master-slider: yes
     </div>
     <ul class="home-news list-unstyled">
       <li>
+        <h4><a href="http://news.stoneagetools.com/partners-with-jjei-canada">StoneAge Partners with JJEI Canada</a></h4>
+        <p>StoneAge Grants Canadian Dealership Appointment to Joe Johnson Equipment in Edmonton, Alberta and Barrie, Ontario.<br>
+        <small><i class="fa fa-newspaper-o"></i> PRWeb, August 2017</small></p>
+      </li>
+      <li>
         <h4><a href="http://news.stoneagetools.com/fully-loaded-for-fall-shutdowns">Fully Loaded Fall Shutdown Special</a></h4>
         <p>Select Automated Equipment purchases come "Fully Loaded" with nozzles and hoses for the job.<br>
-        <small><i class="fa fa-newspaper-o"></i> E-blast, August 2017</small></p>
+        <small><i class="fa fa-paper-plane-o"></i> E-blast, August 2017</small></p>
       </li>
       <li>
         <h4><a href="http://news.stoneagetools.com/autopack-3l-and-autopack-2l-available">AutoPacks for ABX-3L and ABX-2L Now Available</a></h4>
@@ -155,12 +160,7 @@ master-slider: yes
       <li>
         <h4><a href="http://news.stoneagetools.com/bop-622-backout-preventer">New Pipe Cleaning Backout Preventer for AutoBox ABX-500</a></h4>
         <p>StoneAge is pleased to offer a versatile new option for mounting the AutoBox ABX-500 to pipe.<br>
-        <small><i class="fa fa-newspaper-o"></i> E-blast, July 2017</small></p>
-      </li>
-      <li>
-        <h4><a href="http://news.stoneagetools.com/lightweight-striker-available">Announcing Lightweight Striker</a></h4>
-        <p>StoneAge is pleased to announce the Lightweight Striker SKRL-100 automated remote shotgun cleaning system.<br>
-        <small><i class="fa fa-paper-plane-o"></i> E-blast, June 2017</small></p>
+        <small><i class="fa fa-paper-plane-o"></i> E-blast, July 2017</small></p>
       </li>
       <li><a href="http://news.stoneagetools.com/">More news here</a></li>
     </ul>
