--- a/waterblast-tools-automated-equipment.html
+++ b/waterblast-tools-automated-equipment.html
@@ -21,7 +21,7 @@ landing: yes
       <label>Filter for:</label>
       <button class="filter" data-filter="all">All</button>
       <button class="filter" data-filter=".exchanger-cleaning">Exchangers</button>
-      <button class="filter" data-filter=".pipe-cleaning">Pipes</button>
+      <button class="filter" data-filter=".pipe-cleaning">Pipes/Drains</button>
       <button class="filter" data-filter=".surface-prep">Surfaces</button>
       <button class="filter" data-filter=".tank-cleaning">Tanks/Vessels</button>
       <button class="filter" data-filter=".boiler-cleaning">Boilers/Furnaces</button>
@@ -118,6 +118,27 @@ landing: yes
                 <tr>
                   <th>Hose Size</th>
                   <td>3/2–8/4, 3/8 Rubber</td>
+                </tr>
+              </tbody>
+            </table>
+            <button>View Details</button>
+          </a>
+        </div>
+        
+        <div class="mix pipe-cleaning" data-name="prodrain" data-designation="automated">
+          <a href="/prodrain" class="search-text">
+            <img src="/assets/img/product/prodrain-01.jpg" class="img-responsive" />
+            <h3>ProDrain</h3>
+            <h5>Drain cleaning accessory</h5>
+            <table class="table">
+              <tbody>
+                <tr>
+                  <th>Facilitates</th>
+                  <td>Safe and easy drain cleaning</td>
+                </tr>
+                <tr>
+                  <th>Works with</th>
+                  <td>ABX-PRO hose tractor</td>
                 </tr>
               </tbody>
             </table>
