--- a/waterblast-automation/autobox-abx-pro.html
+++ b/waterblast-automation/autobox-abx-pro.html
@@ -178,6 +178,46 @@ master-slider: yes
           <div class="col-sm-4 col-centered">
             <!-- Lightbox call -->
             <div>
+              <a href="#" src="/assets/vid/vids.html" data-featherlight="/assets/vid/vids.html #ap-pipe-vid">
+                <img src="/assets/vid/thumb/autopack-pipe-vid.jpg" alt="AutoPack-PRO Overview video" class="img-responsive" />
+              </a>
+            </div>
+            <!-- End Lightbox call -->
+            <p class="caption">ABX-PRO Pipe Cleaning</p>
+          </div>
+          <div class="col-sm-4 col-centered">
+            <!-- Lightbox call -->
+            <div>
+              <a href="#" src="/assets/vid/vids.html" data-featherlight="/assets/vid/vids.html #ap-drain-vid">
+                <img src="/assets/vid/thumb/autopack-drain-vid.jpg" alt="AutoPack-PRO Overview video" class="img-responsive" />
+              </a>
+            </div>
+            <!-- End Lightbox call -->
+            <p class="caption">ABX-PRO Drain Cleaning</p>
+          </div>
+          <div class="col-sm-4 col-centered">
+            <!-- Lightbox call -->
+            <div>
+              <a href="#" src="/assets/vid/vids.html" data-featherlight="/assets/vid/vids.html #ap-tube-1-vid">
+                <img src="/assets/vid/thumb/autopack-exchanger-1-vid.jpg" alt="AutoPack-PRO Overview video" class="img-responsive" />
+              </a>
+            </div>
+            <!-- End Lightbox call -->
+            <p class="caption">ABX-PRO Exchanger Cleaning</p>
+          </div>
+          <div class="col-sm-4 col-centered">
+            <!-- Lightbox call -->
+            <div>
+              <a href="#" src="/assets/vid/vids.html" data-featherlight="/assets/vid/vids.html #ap-surface-vid">
+                <img src="/assets/vid/thumb/autopack-surface-vid.jpg" alt="AutoPack-PRO Overview video" class="img-responsive" />
+              </a>
+            </div>
+            <!-- End Lightbox call -->
+            <p class="caption">ABX-PRO Surface Cleaning</p>
+          </div>
+          <div class="col-sm-4 col-centered">
+            <!-- Lightbox call -->
+            <div>
               <a href="#" src="/assets/vid/vids.html" data-featherlight="/assets/vid/vids.html #pro-vid">
                 <img src="/assets/vid/thumb/pro-vid.png" alt="AutoBox ProDrive Overviewvideo" class="img-responsive" />
               </a>
