--- a/waterblast-automation/prodrain.html
+++ b/waterblast-automation/prodrain.html
@@ -137,12 +137,16 @@ master-slider: yes
       <section id="section-bar-2">
         <div class="col-sm-4">
           <ul class="list-unstyled basic">
-            <h3>Manuals/Documentation</h3>
-            <li><a href="/assets/pdf/manuals/ABX-PRO_manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;AutoBox ABX-PRO Manual</a></li>
+            <h3>Manuals</h3>
+            <li><a href="/assets/pdf/manuals/ABX-PRO_manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;ABX-PRO Manual</a></li>
+            <li><a href="/assets/pdf/manuals/CB-ABX-PRO_manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;CB-ABX-PRO Manual</a></li>
           </ul>
         </div>
         <div class="col-sm-4">
-          
+          <ul class="list-unstyled basic">
+            <h3>Documentation</h3>
+            <li><a href="/assets/pdf/data-sheets/ProDrain_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;ProDrain Data Sheet</a></li>
+          </ul>
         </div>
         <aside class="col-sm-3 col-sm-offset-1 aside-box">
           <h3>Need Support?</h3>
