start again after stash bust

--- a/service-repairs-returns.html
+++ b/service-repairs-returns.html
@@ -15,7 +15,7 @@ permalink: /service
   <div class="col-sm-7 margin-bottom-30">
     <h2 class="section-heading">Technical Support</h2>
     <p>For Technical Support, please contact StoneAge. Operator's manuals and repair videos are available on this website. They illustrate tools, identify parts, and detail maintenance and overhaul procedures.</p>
-    <h3><a href="/manuals"><i class="fa fa-book"></i> Find product manuals here.</a></h3>
+    <h3><a href="/manuals"><i class="fa fa-book"></i> Find product manuals here</a></h3>
 
     <h2 class="section-heading margin-top-30">Repairs</h2>
     <p>Repair &amp; Maintenance Service is available by the same technicians who build and test our tools. We try to complete repairs and test every tool within three days of receipt.</p>
@@ -50,6 +50,18 @@ permalink: /service
           Durango CO 81303<br>
           +1 (970) 259-2869<br>
           <a href="mailto:sales@stoneagetools.com">sales@stoneagetools.com</a></p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-sm-6">
+        <h5 class="bold slab">Europe</h5>
+        <p>Unit 2, Britannia Business Centre<br>
+          Britannia Way<br>
+          Malvern WR14 1GZ<br>
+          +44 (0) 1684 892065<br>
+          <a href="mailto:sales-eu@stoneagetools.com">sales-eu@stoneagetools.com</a></p>
+      </div>
+      <div class="col-sm-6">
       </div>
     </div>
     
@@ -153,7 +165,6 @@ permalink: /service
 
   <aside class="col-sm-4 col-sm-offset-1 right-sidebar">
     <div class="row grey">
-      <a href="/contact"><img src="/assets/img/sa-4-locations.jpg" class="img-responsive" alt="StoneAge locations" /></a><br>
       <h3>Service Contacts</h3>
       <table class="table table-responsive">
         <tr>
@@ -163,6 +174,10 @@ permalink: /service
         <tr>
           <td>Outside the USA</td>
           <td>+1 (970) 259-2869</td>
+        </tr>
+        <tr>
+          <td>StoneAge Europe</td>
+          <td>+44 (0) 1684 892065</td>
         </tr>
         <tr>
           <td>FAX</td>
