--- a/waterblast-automation/autobox-abx-pro.html
+++ b/waterblast-automation/autobox-abx-pro.html
@@ -70,7 +70,7 @@ master-slider: yes
         <li>Ultra portable system design</li>
         <li>Interchangeable rollers to accommodate multiple hose sizes</li>
         <li>Independently adjustable forward and reverse feed rate to customize dwell time</li>
-        <li>Ergonomic control box/li>
+        <li>Ergonomic control box</li>
         <li>Multiple mounting kits available for tube, pipe, and drain cleaning</li>
         <li>Add hose rotation with <a href="/navigator">NAV-170-PKG</a> accessory for cleaning pipes with multiple bends</li>
         <li>CE Certified</li>
