--- a/waterblast-tools-automated-equipment.html
+++ b/waterblast-tools-automated-equipment.html
@@ -26,6 +26,7 @@ landing: yes
       <button class="filter" data-filter=".tank-cleaning">Tanks/Vessels</button>
       <button class="filter" data-filter=".boiler-cleaning">Boilers/Furnaces</button>
       <button class="filter" data-filter=".hydro-demo">Concrete</button>
+      <button class="filter" data-filter=".tools">Tools</button>
       <button class="filter" data-filter=".swivels">Swivels</button>
       <button class="filter" data-filter=".accessories">Accessories</button>
       <a href="#" data-featherlight="#search-box"><img src="/assets/img/icon_search_lg.png" alt="Search" style="width:20px; margin-left:15px;" /></a>
