--- a/index.html
+++ b/index.html
@@ -113,10 +113,10 @@ master-slider: yes
       <h2>Events</h2>
     </div>
     <div class="row">
-      <a href="http://www.tristateseminar.com/" target="_blank"><img src="/assets/img/thumb/upcoming_events_tri-state_2017.JPG" class="img-responsive"/ alt="Visit StoneAge at Tri-State 2017"></a>
-      <div class="caption">
+      <a href="http://www.tristateseminar.com/" target="_blank"><img src="/assets/img/thumb/upcoming_events_tri-state_2017.JPG" class="img-responsive" alt="Visit StoneAge at Tri-State 2017"></a>
+      <div class="caption text-center">
         <h4><a href="http://www.tristateseminar.com/" target="_blank">33rd Annual<br>Tri-State Seminar<br><span class="small">September 26-28<br/>
-        South Point Hotel &amp; Casino<br>
+<!--        South Point Hotel &amp; Casino<br>-->
           Las Vegas, NV</span></a></h4>
 <!--
         <p><strong>Visit Us in Booth 301</strong></p>
@@ -125,12 +125,23 @@ master-slider: yes
       </div>
     </div>
     
-    <div class="row" style="padding-top:15px;">
+    <div class="row">
       <a href="http://weftec.org/" target="_blank"><img src="/assets/img/thumb/upcoming-events-weftec-2017.jpg" class="img-responsive"/ alt="Visit StoneAge at Weftec 2017"></a>
-      <div class="caption">
-        <h4><a href="http://weftec.org/" target="_blank">WEFTEC 2017<br><span class="small">September 30 - October 4<br/>
-          McCormick Place<br>
+      <div class="caption text-center">
+        <h4><a href="http://weftec.org/" target="_blank">WEFTEC 2017<br>
+          <span class="small">September 30-October 4<br/>
+<!--          McCormick Place<br>-->
           Chicago, IL</span></a></h4>
+      </div>
+    </div>
+    
+    <div class="row" style="padding-top:25px;">
+      <a href="https://www.wjtaimcaexpo.com/assnfe/Ev.asp?ID=23" target="_blank"><img src="/assets/img/thumb/upcoming-events-wjta-expo-17.png" class="img-responsive"/ alt="Visit StoneAge at WJTA-IMCA Expo 2017"></a>
+      <div class="caption text-center">
+        <h4><a href="https://www.wjtaimcaexpo.com/assnfe/Ev.asp?ID=23" target="_blank">WJTA Conference &amp; Expo<br>
+          <span class="small">October 25-27<br/>
+<!--          McCormick Place<br>-->
+          New Orleans, LA</span></a></h4>
       </div>
     </div>
   </div>
