--- a/index.html
+++ b/index.html
@@ -5,56 +5,242 @@ title: StoneAge Waterblast Tools - High pressure equipment for Hydroblasting | I
 excerpt: Manufacturer of high quality waterblast tools and automated equipment for high pressure hydroblasting/industrial cleaning, sewer jetting nozzles, and downhole tools for well intervention.
 permalink: /
 master-slider: yes
+landing: yes
 ---
 
-<!-- Carousel -->
-<div class="containter-fluid home-slider">
-  <div id="homeSlides" class="carousel slide" data-ride="carousel">
-    <!-- Indicators -->
-    <form action="#" onsubmit="window.open(whichsite(this), '_self'); return false;" class="indicator-panel">
-      <h3>What are you cleaning?</h3>
-      <div class="carousel-indicators">
-        <a data-target="#homeSlides" data-slide-to="0" class="active" id="/waterblast-tools-automated-equipment"><span>Heat Exchangers</span></a>
-        <a data-target="#homeSlides" data-slide-to="1" id="/pipe-cleaning-applications"><span>Pipe Interiors</span></a>
-        <a data-target="#homeSlides" data-slide-to="2" id="/surface-cleaning-applications"><span>Exterior Surfaces</span></a>
-        <a data-target="#homeSlides" data-slide-to="3" id="/tank-vessel-cleaning-applications"><span>Tanks/Vessels</span></a>
-        <a data-target="#homeSlides" data-slide-to="4" id="/furnace-boiler-cleaning-applications"><span>Furnaces/Boilers</span></a>
-        <a data-target="#homeSlides" data-slide-to="5" id="/sewer-tools"><span>Sewer Lines</span></a>
-        <a data-target="#homeSlides" data-slide-to="6" id="/downhole-tools"><span>Downhole</span></a>
-      </div>
-<!--      <input type="submit" class="btn" value="GO">-->
-    </form>
+<!-- masterslider -->
+<div class="master-slider ms-skin-default" id="homeslider">
+  
+  <!-- new slide -->
+  <div class="ms-slide">
+    <img src="/assets/img/features/bg_blue.jpg" data-src="/assets/img/features/bg_blue.jpg" alt="lorem ipsum dolor sit"/>  
 
-    <!-- Wrapper for slides -->
-    <div class="carousel-inner" role="listbox">
-      <div class="item active">
-        <img src="/assets/img/sliders/home/abx-2l-water.jpg" alt="AutoBox ABX-2L heat exchanger tube lancing">
-      </div>
-      <div class="item">
-        <img src="/assets/img/sliders/home/bjv_pipe.jpg" alt="High pressure pipe cleaning tools and automated systems">
-      </div>
-      <div class="item">
-        <img src="/assets/img/sliders/home/striker-cart.jpg" alt="Hands free high pressure hydroblasting for surface prep and decontamination">
-      </div>
-      <div class="item">
-        <img src="/assets/img/sliders/home/torus_in_tank.jpg" alt="2D and 3D tank and vessel cleaning ">
-      </div>
-      <div class="item">
-        <img src="/assets/img/sliders/home/btc-boiler.jpg" alt="Boiler and boiler tube cleaning">
-      </div>
-      <div class="item">
-        <img src="/assets/img/sliders/home/whp_pipe.jpg" alt="Warthog sewer jetting nozzles">
-      </div>
-      <div class="item">
-        <img src="/assets/img/sliders/home/spincat-hero.jpg" alt="Downhole rotary wash tools">
-      </div>
+    <div class="ms-layer feature-h2" style="" 
+      data-effect="t(true,n,-60,n,n,n,n,n,n,n,n,n,n,n,n)" 
+      data-duration="2200" 
+      data-delay="1000" 
+      data-ease="easeOutQuint"                
+      data-offset-x="150" 
+      data-offset-y="-63" 
+      data-origin="ml" 
+      data-position="normal">Visit Us
+    </div>
+
+    <div class="ms-layer" style="width:280px;"
+      data-effect="t(true,n,40,n,n,n,n,n,n,n,n,n,n,n,n)" 
+      data-duration="2200" 
+      data-delay="800" 
+      data-ease="easeOutQuint"                
+      data-offset-x="150" 
+      data-offset-y="-23" 
+      data-origin="ml" 
+      data-position="normal"   
+      data-masked="true">Check out the latest StoneAge equipment, live demos, and educational sessions.
+    </div>
+
+    <div class="ms-layer feature-h2" style="width:328px;"   
+      data-effect="t(true,n,20,n,n,n,n,n,n,n,n,n,n,n,n)" 
+      data-duration="2400" 
+      data-delay="1200" 
+      data-ease="easeOutQuint"                
+      data-offset-x="150" 
+      data-offset-y="11" 
+      data-origin="ml" 
+      data-position="normal">
+      Booth #705
+    </div>
+
+    <a href="https://www.wjtaimcaexpo.com/assnfe/Ev.asp?ID=23" target="_blank" class="ms-layer ms-btn ms-btn-circle ms-btn-m" 
+       data-effect="t(true,n,n,-600,n,n,n,n,n,n,n,n,n,n,n)" 
+       data-duration="2400" 
+       data-delay="1600" 
+       data-ease="easeOutQuint"        
+       data-type="button"        
+       data-offset-x="150" 
+       data-offset-y="104" 
+       data-origin="ml" 
+       data-position="normal">More Info
+    </a>
+
+<!--    <img  class="ms-layer" src="/assets/img/features/wjta-2017.jpg" data-src="/assets/img/features/wjta-2017.jpg" alt="" style=""  data-effect="t(true,n,n,n,n,n,n,n,n,n,n,n,n,n,n)"   data-ease="easeOutQuint"       data-parallax="160" data-type="image"          data-offset-x="2" data-offset-y="0" data-origin="mr" data-position="normal" />-->
+
+    <img class="ms-layer" src="/assets/img/features/wjta-2017-text.png" 
+       data-src="/assets/img/features/wjta-2017-text.png" alt="" style=""  
+       data-effect="t(true,n,n,n,n,n,n,n,n,n,n,n,n,n,n)"   
+       data-ease="easeOutQuint"       
+       data-parallax="90" 
+       data-type="image"          
+       data-offset-x="30" 
+       data-offset-y="0" 
+       data-origin="mr" 
+       data-position="normal"
+     />
+
+  </div>
+  <!-- end of slide -->
+  
+  <!-- new slide -->
+  <div class="ms-slide">
+    <img src="/assets/img/features/bg_tube.jpg" data-src="/assets/img/features/bg_tube.jpg" alt="lorem ipsum dolor sit"/>  
+
+    <div class="ms-layer msp-cn-171-1" style="" 
+      data-effect="t(true,n,-60,n,n,n,n,n,n,n,n,n,n,n,n)" 
+      data-duration="2200" 
+      data-delay="1000" 
+      data-ease="easeOutQuint"                
+      data-offset-x="150" 
+      data-offset-y="-112" 
+      data-origin="ml" 
+      data-position="normal">Welcome to
+    </div>
+
+    <div class="ms-layer  msp-cn-171-2" style="width:340px;"
+      data-effect="t(true,n,40,n,n,n,n,n,n,n,n,n,n,n,n)" 
+      data-duration="2200" 
+      data-delay="1600" 
+      data-ease="easeOutQuint"                
+      data-offset-x="150" 
+      data-offset-y="-63" 
+      data-origin="ml" 
+      data-position="normal"   
+      data-masked="true">POPROVANIA PRO
+    </div>
+
+    <div class="ms-layer  msp-cn-171-3" style="width:328px;"   
+      data-effect="t(true,n,20,n,n,n,n,n,n,n,n,n,n,n,n)" 
+      data-duration="2400" 
+      data-delay="2200" 
+      data-ease="easeOutQuint"                
+      data-offset-x="150" 
+      data-offset-y="11" 
+      data-origin="ml" 
+      data-position="normal">
+      Poprovania Pro is a stunning free theme, that is perfect for minimalist bloggers, photographers, online shops, and anyone who wants a classy and chic website. Its powerful options let you to easily customize it depending on your needs.</div>
+
+    <a href="#" target="_self" class="ms-layer ms-btn ms-btn-circle ms-btn-m" 
+       data-effect="t(true,n,n,-600,n,n,n,n,n,n,n,n,n,n,n)" 
+       data-duration="2400" 
+       data-delay="2800" 
+       data-ease="easeOutQuint"        
+       data-type="button"        
+       data-offset-x="150" 
+       data-offset-y="104" 
+       data-origin="ml" 
+       data-position="normal">More Info
+    </a>
+
+<!--    <img  class="ms-layer" src="/assets/img/features/wjta-2017.jpg" data-src="/assets/img/features/wjta-2017.jpg" alt="" style=""  data-effect="t(true,n,n,n,n,n,n,n,n,n,n,n,n,n,n)"   data-ease="easeOutQuint"       data-parallax="160" data-type="image"          data-offset-x="2" data-offset-y="0" data-origin="mr" data-position="normal" />-->
+
+    <img class="ms-layer" src="/assets/img/features/wjta-2017-text.png" 
+       data-src="/assets/img/features/wjta-2017-text.png" alt="" style=""  
+       data-effect="t(true,n,n,n,n,n,n,n,n,n,n,n,n,n,n)"   
+       data-ease="easeOutQuint"       
+       data-parallax="90" 
+       data-type="image"          
+       data-offset-x="30" 
+       data-offset-y="0" 
+       data-origin="mr" 
+       data-position="normal"
+     />
+
+  </div>
+  <!-- end of slide -->
+  
+  <!-- new slide -->
+  <div class="ms-slide">
+    <img src="/assets/img/features/bg_tube.jpg" data-src="/assets/img/features/bg_tube.jpg" alt="lorem ipsum dolor sit"/>  
+
+    <div class="ms-layer msp-cn-171-1" style="" 
+      data-effect="t(true,n,-60,n,n,n,n,n,n,n,n,n,n,n,n)" 
+      data-duration="2200" 
+      data-delay="1000" 
+      data-ease="easeOutQuint"                
+      data-offset-x="150" 
+      data-offset-y="-112" 
+      data-origin="ml" 
+      data-position="normal">Welcome to
+    </div>
+
+    <div class="ms-layer  msp-cn-171-2" style="width:340px;"
+      data-effect="t(true,n,40,n,n,n,n,n,n,n,n,n,n,n,n)" 
+      data-duration="2200" 
+      data-delay="1600" 
+      data-ease="easeOutQuint"                
+      data-offset-x="150" 
+      data-offset-y="-63" 
+      data-origin="ml" 
+      data-position="normal"   
+      data-masked="true">POPROVANIA PRO
+    </div>
+
+    <div class="ms-layer  msp-cn-171-3" style="width:328px;"   
+      data-effect="t(true,n,20,n,n,n,n,n,n,n,n,n,n,n,n)" 
+      data-duration="2400" 
+      data-delay="2200" 
+      data-ease="easeOutQuint"                
+      data-offset-x="150" 
+      data-offset-y="11" 
+      data-origin="ml" 
+      data-position="normal">
+      Poprovania Pro is a stunning free theme, that is perfect for minimalist bloggers, photographers, online shops, and anyone who wants a classy and chic website. Its powerful options let you to easily customize it depending on your needs.</div>
+
+    <a href="#" target="_self" class="ms-layer ms-btn ms-btn-circle ms-btn-m" 
+       data-effect="t(true,n,n,-600,n,n,n,n,n,n,n,n,n,n,n)" 
+       data-duration="2400" 
+       data-delay="2800" 
+       data-ease="easeOutQuint"        
+       data-type="button"        
+       data-offset-x="150" 
+       data-offset-y="104" 
+       data-origin="ml" 
+       data-position="normal">More Info
+    </a>
+
+<!--    <img  class="ms-layer" src="/assets/img/features/wjta-2017.jpg" data-src="/assets/img/features/wjta-2017.jpg" alt="" style=""  data-effect="t(true,n,n,n,n,n,n,n,n,n,n,n,n,n,n)"   data-ease="easeOutQuint"       data-parallax="160" data-type="image"          data-offset-x="2" data-offset-y="0" data-origin="mr" data-position="normal" />-->
+
+    <img class="ms-layer" src="/assets/img/features/wjta-2017-text.png" 
+       data-src="/assets/img/features/wjta-2017-text.png" alt="" style=""  
+       data-effect="t(true,n,n,n,n,n,n,n,n,n,n,n,n,n,n)"   
+       data-ease="easeOutQuint"       
+       data-parallax="90" 
+       data-type="image"          
+       data-offset-x="30" 
+       data-offset-y="0" 
+       data-origin="mr" 
+       data-position="normal"
+     />
+
+  </div>
+  <!-- end of slide -->
+ 
+</div>
+<!-- end of masterslider -->
+
+<!-- Application Filter -->
+<div class="row landing">
+  <div class="controls home-filter text-center">
+    <h2>What are you cleaning?</h2>
+    <button class="filter" data-filter=".exchanger-cleaning">Exchangers</button>
+    <button class="filter" data-filter=".pipe-cleaning">Pipes/Drains</button>
+    <button class="filter" data-filter=".surface-prep">Surfaces</button>
+    <button class="filter" data-filter=".tank-cleaning">Tanks/Vessels</button>
+    <button class="filter" data-filter=".boiler-cleaning">Boilers/Furnaces</button>
+    <button class="filter" data-filter=".hydro-demo">Concrete</button>
+    <button class="filter" data-filter=".tools">Sewer Lines</button>
+    <button class="filter" data-filter=".accessories">Downhole</button>
+    <a href="#" data-featherlight="#search-box"><img src="/assets/img/icon_search_lg.png" alt="Search" style="width:20px; margin-left:15px;" /></a>
+
+    <div class="lightbox" id="search-box">
+      <form action="search">
+        <input type="text" name="q" id="tipue_search_input" autocomplete="off" placeholder="What are we looking for?">
+      </form>
     </div>
   </div>
 </div>
-<!-- End Carousel -->
+<!-- Application Filter -->
 
 <!-- About -->
-<section class="home-about">
+<section class="home-about bg-lt-grey">
   <div class="container padding-tb-30">
     <div class="col-sm-9 description padding-right-120">
       <h2>Waterblast Equipment for Industrial Cleaning</h2>
@@ -69,41 +255,6 @@ master-slider: yes
   </div>
 </section>
 <!-- End About -->
-
-<!-- Features -->    
-<section class="home-features bg-lt-grey">
-  <div class="container padding-tb-30">
-    
-    <!-- Features/Promos -->
-    <div class="col-md-9 padding-right-60">
-      <div class="section-heading">
-        <h2>Features &amp; Promotions</h2>
-      </div>   
-      <div class="row margin-bottom-20">
-        <a href="http://info.stoneagetools.com/fully-loaded-fall-shutdown-special"><img src="/assets/img/features/fully-loaded.png" alt="Fully Loaded Fall Shutdown Special" class="img-responsive"/></a>
-      </div>
-      <div class="row margin-bottom-20">
-        <a href="/autopack"><img src="/assets/img/features/autopack.png" alt="AutoPack autimated equipment kits for waterblasting" class="img-responsive"/></a>
-      </div>   
-    </div>
-    <!-- End Features/Promos -->
-
-    <!-- White Papers -->
-    <div class="col-md-2 col-sm-4 col-md-offset-1">
-      <div class="section-heading">
-        <h2>White Papers</h2>
-      </div>
-      <a href="/assets/pdf/reference/papers/quality-waterblasting.pdf" target="_blank"><img src="assets/img/keys-white-paper.jpg" class="img-responsive" /></a>
-      <div class="caption">
-        <h4><a href="/assets/pdf/reference/papers/quality-waterblasting.pdf" target="_blank">4 Keys to Quality Waterblasting</a></h4>
-        <p>Basic knowledge of water mechanics can help you achieve better results for your customers.</p>
-        <button type="button" class="btn">Download</button>
-      </div>
-    </div><!-- End White Papers -->
-
-  </div>
-</section>
-<!-- End Features -->
 
 <!-- News & Events -->
 <section class="container padding-tb-30">
