--- a/waterblast-automation/autobox-abx-pro.html
+++ b/waterblast-automation/autobox-abx-pro.html
@@ -77,7 +77,7 @@ master-slider: yes
       </ul>
       
       <div class="accessories">
-        <h3>Compatible with:</h3> <a class="btn" href="/lightweight-positioner" data-toggle="tooltip" title="Lightweight Positioner">LWP</a> <a class="btn" href="/navigator" data-toggle="tooltip" title="Navigator">NAV</a> <a class="btn" href="/boiler-tube-cleaner" data-toggle="tooltip" title="Boiler Tube Cleaner">BTC</a>
+        <h3>Compatible with:</h3> <a class="btn" href="/lightweight-positioner" data-toggle="tooltip" title="Lightweight Positioner">LWP</a> <a class="btn" href="/navigator" data-toggle="tooltip" title="Navigator">NAV</a> <a class="btn" href="/boiler-tube-cleaner" data-toggle="tooltip" title="Boiler Tube Cleaner">BTC</a> <a class="btn" href="/prodrain" data-toggle="tooltip" title="ProDrain PRO-700">PRO-700</a>
       </div>
 
       <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Availability</a>
@@ -327,6 +327,10 @@ master-slider: yes
       <div class="item">
         <a href="/autopack-pro"><img class="img-responsive" src="/assets/img/product/thumb-autopack-pro-01.jpg" alt="AutoPack-LWP">
         <h5>AutoPack-PRO</h5></a>
+      </div>
+      <div class="item">
+        <a href="/prodrain"><img class="img-responsive" src="/assets/img/product/thumb-prodrain-01.jpg" alt="ProDrain PRO-700">
+        <h5>ProDrain</h5></a>
       </div>
       <div class="item">
         <a href="/beetle"><img class="img-responsive" src="/assets/img/product/thumb-banshee-04.jpg" alt="Beetle tube cleaning tools">
