--- a/index.html
+++ b/index.html
@@ -13,6 +13,95 @@ landing: yes
   
   <!-- new slide -->
   <div class="ms-slide">
+    <img src="/assets/img/features/bg_red.jpg" data-src="/assets/img/features/bg_red.jpg" alt="lorem ipsum dolor sit"/> 
+
+    <div class="ms-layer feature-h1" style="width:400px;"
+      data-effect="t(true,n,40,n,n,n,n,n,n,n,n,n,n,n,n)" 
+      data-duration="2200" 
+      data-delay="800" 
+      data-ease="easeOutQuint"                
+      data-offset-x="150" 
+      data-offset-y="-43" 
+      data-origin="ml" 
+      data-position="normal"   
+      data-masked="true">Fully Loaded
+    </div>
+    
+    <div class="ms-layer feature-h2" style="" 
+      data-effect="t(true,n,-60,n,n,n,n,n,n,n,n,n,n,n,n)" 
+      data-duration="2200" 
+      data-delay="1000" 
+      data-ease="easeOutQuint"                
+      data-offset-x="150" 
+      data-offset-y="-83" 
+      data-origin="ml" 
+      data-position="normal">Fall Shutdown Special
+    </div>
+
+    <div class="ms-layer feature-h2" style="width:300px;"   
+      data-effect="t(true,n,20,n,n,n,n,n,n,n,n,n,n,n,n)" 
+      data-duration="2400" 
+      data-delay="1600" 
+      data-ease="easeOutQuint"                
+      data-offset-x="150" 
+      data-offset-y="16" 
+      data-origin="ml" 
+      data-position="normal">FREE hoses and nozzles with select automated equipment
+    </div>
+
+    <a href="http://info.stoneagetools.com/fully-loaded-fall-shutdown-special" target="_self" class="ms-layer ms-btn ms-btn-circle ms-btn-m" 
+       data-effect="t(true,n,n,-600,n,n,n,n,n,n,n,n,n,n,n)" 
+       data-duration="2400" 
+       data-delay="1600" 
+       data-ease="easeOutQuint"        
+       data-type="button"        
+       data-offset-x="150" 
+       data-offset-y="104" 
+       data-origin="ml" 
+       data-position="normal">More Info
+    </a>
+
+    <img class="ms-layer" src="/assets/img/features/ABX-PRO_beauty_01.png" 
+       data-src="/assets/img/features/ABX-PRO_beauty_01.png" alt="ABX-PRO" style=""  
+       data-effect="t(true,n,n,n,n,n,n,n,n,n,n,n,n,n,n)"   
+       data-ease="easeOutQuint"       
+       data-parallax="90" 
+       data-type="image"          
+       data-offset-x="0" 
+       data-offset-y="0" 
+       data-origin="mr" 
+       data-position="normal"
+     />
+    
+    <img class="ms-layer" src="/assets/img/features/btl-bn-nozzles.png" data-src="/assets/img/features/btl-bn-nozzles.png" alt="" style=""  
+        data-effect="t(true,n,60,n,n,n,n,n,n,n,n,n,n,n,n)"   
+        data-duration="2400" 
+        data-delay="1200" 
+        data-ease="easeOutQuint"  
+        data-type="image"          
+        data-offset-x="336" 
+        data-offset-y="130" 
+        data-origin="mr" 
+        data-position="normal" 
+     />
+
+     <img class="ms-layer" src="/assets/img/features/hoses.png" data-src="/assets/img/features/hoses.png" alt="" style=""  
+        data-effect="t(true,n,80,n,n,n,n,n,n,n,n,n,n,n,n)"  
+        data-duration="2400" 
+        data-delay="1600"  
+        data-ease="easeOutQuint"   
+        data-type="image"          
+        data-offset-x="640" 
+        data-offset-y="80" 
+        data-origin="mr" 
+        data-position="normal" 
+      />
+
+  </div>
+  <!-- end of slide -->
+  
+  <!-- new slide -->
+  <div class="ms-slide">
     <img src="/assets/img/features/bg_blue.jpg" data-src="/assets/img/features/bg_blue.jpg" alt="lorem ipsum dolor sit"/>  
 
     <div class="ms-layer feature-h2" style="" 
@@ -81,46 +170,24 @@ landing: yes
   
   <!-- new slide -->
   <div class="ms-slide">
-    <img src="/assets/img/features/bg_tube.jpg" data-src="/assets/img/features/bg_tube.jpg" alt="lorem ipsum dolor sit"/>  
+    <img src="/assets/img/features/bg_gold.jpg" data-src="/assets/img/features/bg_gold.jpg" alt="lorem ipsum dolor sit"/>  
 
-    <div class="ms-layer msp-cn-171-1" style="" 
-      data-effect="t(true,n,-60,n,n,n,n,n,n,n,n,n,n,n,n)" 
-      data-duration="2200" 
-      data-delay="1000" 
-      data-ease="easeOutQuint"                
-      data-offset-x="150" 
-      data-offset-y="-112" 
-      data-origin="ml" 
-      data-position="normal">Welcome to
-    </div>
-
-    <div class="ms-layer  msp-cn-171-2" style="width:340px;"
+    <div class="ms-layer feature-h1" style="width:400px;"
       data-effect="t(true,n,40,n,n,n,n,n,n,n,n,n,n,n,n)" 
       data-duration="2200" 
-      data-delay="1600" 
+      data-delay="800" 
       data-ease="easeOutQuint"                
       data-offset-x="150" 
-      data-offset-y="-63" 
+      data-offset-y="-23" 
       data-origin="ml" 
       data-position="normal"   
-      data-masked="true">POPROVANIA PRO
+      data-masked="true">Your solution to automated waterblasting
     </div>
 
-    <div class="ms-layer  msp-cn-171-3" style="width:328px;"   
-      data-effect="t(true,n,20,n,n,n,n,n,n,n,n,n,n,n,n)" 
-      data-duration="2400" 
-      data-delay="2200" 
-      data-ease="easeOutQuint"                
-      data-offset-x="150" 
-      data-offset-y="11" 
-      data-origin="ml" 
-      data-position="normal">
-      Poprovania Pro is a stunning free theme, that is perfect for minimalist bloggers, photographers, online shops, and anyone who wants a classy and chic website. Its powerful options let you to easily customize it depending on your needs.</div>
-
-    <a href="#" target="_self" class="ms-layer ms-btn ms-btn-circle ms-btn-m" 
+    <a href="http://info.stoneagetools.com/autopack" target="_self" class="ms-layer ms-btn ms-btn-circle ms-btn-m" 
        data-effect="t(true,n,n,-600,n,n,n,n,n,n,n,n,n,n,n)" 
        data-duration="2400" 
-       data-delay="2800" 
+       data-delay="1600" 
        data-ease="easeOutQuint"        
        data-type="button"        
        data-offset-x="150" 
@@ -129,8 +196,18 @@ landing: yes
        data-position="normal">More Info
     </a>
 
-<!--    <img  class="ms-layer" src="/assets/img/features/wjta-2017.jpg" data-src="/assets/img/features/wjta-2017.jpg" alt="" style=""  data-effect="t(true,n,n,n,n,n,n,n,n,n,n,n,n,n,n)"   data-ease="easeOutQuint"       data-parallax="160" data-type="image"          data-offset-x="2" data-offset-y="0" data-origin="mr" data-position="normal" />-->
+    <img  class="ms-layer" src="/assets/img/features/autopack_beauty_02.png" alt="" style="" 
+         data-src="/assets/img/features/autopack_beauty_02.png" 
+         data-effect="t(true,n,n,n,n,n,n,n,n,n,n,n,n,n,n)"   
+         data-ease="easeOutQuint"       
+         data-parallax="160" 
+         data-type="image"          
+         data-offset-x="-60" 
+         data-offset-y="-40" 
+         data-origin="tr" 
+         data-position="normal" />
 
+<!--
     <img class="ms-layer" src="/assets/img/features/wjta-2017-text.png" 
        data-src="/assets/img/features/wjta-2017-text.png" alt="" style=""  
        data-effect="t(true,n,n,n,n,n,n,n,n,n,n,n,n,n,n)"   
@@ -142,73 +219,7 @@ landing: yes
        data-origin="mr" 
        data-position="normal"
      />
-
-  </div>
-  <!-- end of slide -->
-  
-  <!-- new slide -->
-  <div class="ms-slide">
-    <img src="/assets/img/features/bg_tube.jpg" data-src="/assets/img/features/bg_tube.jpg" alt="lorem ipsum dolor sit"/>  
-
-    <div class="ms-layer msp-cn-171-1" style="" 
-      data-effect="t(true,n,-60,n,n,n,n,n,n,n,n,n,n,n,n)" 
-      data-duration="2200" 
-      data-delay="1000" 
-      data-ease="easeOutQuint"                
-      data-offset-x="150" 
-      data-offset-y="-112" 
-      data-origin="ml" 
-      data-position="normal">Welcome to
-    </div>
-
-    <div class="ms-layer  msp-cn-171-2" style="width:340px;"
-      data-effect="t(true,n,40,n,n,n,n,n,n,n,n,n,n,n,n)" 
-      data-duration="2200" 
-      data-delay="1600" 
-      data-ease="easeOutQuint"                
-      data-offset-x="150" 
-      data-offset-y="-63" 
-      data-origin="ml" 
-      data-position="normal"   
-      data-masked="true">POPROVANIA PRO
-    </div>
-
-    <div class="ms-layer  msp-cn-171-3" style="width:328px;"   
-      data-effect="t(true,n,20,n,n,n,n,n,n,n,n,n,n,n,n)" 
-      data-duration="2400" 
-      data-delay="2200" 
-      data-ease="easeOutQuint"                
-      data-offset-x="150" 
-      data-offset-y="11" 
-      data-origin="ml" 
-      data-position="normal">
-      Poprovania Pro is a stunning free theme, that is perfect for minimalist bloggers, photographers, online shops, and anyone who wants a classy and chic website. Its powerful options let you to easily customize it depending on your needs.</div>
-
-    <a href="#" target="_self" class="ms-layer ms-btn ms-btn-circle ms-btn-m" 
-       data-effect="t(true,n,n,-600,n,n,n,n,n,n,n,n,n,n,n)" 
-       data-duration="2400" 
-       data-delay="2800" 
-       data-ease="easeOutQuint"        
-       data-type="button"        
-       data-offset-x="150" 
-       data-offset-y="104" 
-       data-origin="ml" 
-       data-position="normal">More Info
-    </a>
-
-<!--    <img  class="ms-layer" src="/assets/img/features/wjta-2017.jpg" data-src="/assets/img/features/wjta-2017.jpg" alt="" style=""  data-effect="t(true,n,n,n,n,n,n,n,n,n,n,n,n,n,n)"   data-ease="easeOutQuint"       data-parallax="160" data-type="image"          data-offset-x="2" data-offset-y="0" data-origin="mr" data-position="normal" />-->
-
-    <img class="ms-layer" src="/assets/img/features/wjta-2017-text.png" 
-       data-src="/assets/img/features/wjta-2017-text.png" alt="" style=""  
-       data-effect="t(true,n,n,n,n,n,n,n,n,n,n,n,n,n,n)"   
-       data-ease="easeOutQuint"       
-       data-parallax="90" 
-       data-type="image"          
-       data-offset-x="30" 
-       data-offset-y="0" 
-       data-origin="mr" 
-       data-position="normal"
-     />
+-->
 
   </div>
   <!-- end of slide -->
