Update news on home

--- a/index.html
+++ b/index.html
@@ -154,6 +154,11 @@ master-slider: yes
     </div>
     <ul class="home-news list-unstyled">
       <li>
+        <h4><a href="http://news.stoneagetools.com/prodrain-for-abx-pro">ProDrain Turns the ABX-PRO into a Powerful Drain Cleaner</a></h4>
+        <p>The ProDrain PRO-700 accessory optimizes the versatile AutoBox ABX-PRO single lance tractor to safely and quickly clean floor drains.<br>
+        <small><i class="fa fa-paper-plane-o"></i> E-blast, August 2017</small></p>
+      </li>
+      <li>
         <h4><a href="http://news.stoneagetools.com/partners-with-jjei-canada">StoneAge Partners with JJEI Canada</a></h4>
         <p>StoneAge Grants Canadian Dealership Appointment to Joe Johnson Equipment in Edmonton, Alberta and Barrie, Ontario.<br>
         <small><i class="fa fa-newspaper-o"></i> PRWeb, August 2017</small></p>
@@ -166,11 +171,6 @@ master-slider: yes
       <li>
         <h4><a href="http://news.stoneagetools.com/autopack-3l-and-autopack-2l-available">AutoPacks for ABX-3L and ABX-2L Now Available</a></h4>
         <p>StoneAge is pleased to announce that AutoPacks are now available for ABX-3L and ABX-2L triple and dual lance tube cleaning systems.<br>
-        <small><i class="fa fa-paper-plane-o"></i> E-blast, July 2017</small></p>
-      </li>
-      <li>
-        <h4><a href="http://news.stoneagetools.com/bop-622-backout-preventer">New Pipe Cleaning Backout Preventer for AutoBox ABX-500</a></h4>
-        <p>StoneAge is pleased to offer a versatile new option for mounting the AutoBox ABX-500 to pipe.<br>
         <small><i class="fa fa-paper-plane-o"></i> E-blast, July 2017</small></p>
       </li>
       <li><a href="http://news.stoneagetools.com/">More news here</a></li>
