wb landing directory update complete

--- a/index.html
+++ b/index.html
@@ -231,14 +231,14 @@ landing: yes
 <div class="row landing">
   <div class="controls home-filter text-center">
     <h2>What are you cleaning?</h2>
-    <button class="filter" data-filter=".exchanger-cleaning">Exchangers</button>
-    <button class="filter" data-filter=".pipe-cleaning">Pipes/Drains</button>
-    <button class="filter" data-filter=".surface-prep">Surfaces</button>
-    <button class="filter" data-filter=".tank-cleaning">Tanks/Vessels</button>
-    <button class="filter" data-filter=".boiler-cleaning">Boilers/Furnaces</button>
-    <button class="filter" data-filter=".hydro-demo">Concrete</button>
-    <button class="filter" data-filter=".tools">Sewer Lines</button>
-    <button class="filter" data-filter=".accessories">Downhole</button>
+    <a href="/waterblast-tools-automated-equipment#exchanger" class="btn">Exchangers</a>
+    <a href="/waterblast-tools-automated-equipment#pipe" class="btn">Pipes/Drains</a>
+    <a href="/waterblast-tools-automated-equipment#surface" class="btn">Surfaces</a>
+    <a href="/waterblast-tools-automated-equipment#tank" class="btn">Tanks/Vessels</a>
+    <a href="/waterblast-tools-automated-equipment#boiler" class="btn">Boilers/Furnaces</a>
+    <a href="/waterblast-tools-automated-equipment#concrete" class="btn">Concrete</a>
+    <a href="/sewer-tools" class="btn">Sewer Lines</a>
+    <a href="/downhole-tools" class="btn">Downhole</a>
     <a href="#" data-featherlight="#search-box"><img src="/assets/img/icon_search_lg.png" alt="Search" style="width:20px; margin-left:15px;" /></a>
 
     <div class="lightbox" id="search-box">
